tests/dupe-ty-var-type/out.txt
error: duplicate type variable: 'a
  ┌─ err.sml:1:11
  │
1 │ type ('a, 'a) foo = int
  │           ^^

typechecking failed
